[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_utils"
version = "0.1.0"
authors = [
  { name="M.Gamal", email="moha.gamal@nu.edu.eg" },
]
description = "Shared utilities for trends microservices"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pydantic-setting"
]

[project.optional-dependencies]
all = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pydantic-core>=2.27.2",
    "python-dotenv>=1.0.1",
    "email_validator>=2.2.0"
]
